@@ -1,5 +1,6 @@
 Nijie Downloader 1.0.9.0
 - Fix Issue #43: Remove duplicated page identifier in filename for manga.
+- Implement #44: Remove 'of' from {maxPage}, add {workdate} and {workdate:customformat} for the work date.
 - Fix Issue #50: Update parser.
 
 Nijie Downloader 1.0.8.0
